End of section 4

--- a/DatingApp.API/DatingApp.API/appsettings.Development.json
+++ b/DatingApp.API/DatingApp.API/appsettings.Development.json
@@ -1,9 +1,16 @@
 {
+  "SystemSettings": {
+    "KeyIssuer": "datingAppkeyIssuer"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=DatingApp.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
       "System": "Information",
       "Microsoft": "Information"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
